--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:hardwareAccelerated="true"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:resizeableActivity="false"
         android:theme="@style/Theme.QuickQR"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -33,13 +34,22 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Base.Theme.QuickQR"
+            android:windowSoftInputMode="stateHidden"/>
+
         <activity android:name=".ScannerActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.QuickQR"/>
+            android:theme="@style/Base.Theme.QuickQR"/>
         
         <activity android:name=".CaptureActivityX"
             android:theme="@style/zxing_CaptureTheme"
             android:screenOrientation="portrait"/>
+
+        <activity android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Base.Theme.QuickQR"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
